--- a/ui/src/main/res/values-fa-rIR/strings.xml
+++ b/ui/src/main/res/values-fa-rIR/strings.xml
@@ -98,10 +98,17 @@
     <string name="create_output_dir_error">نمی‌توان دایرکتوری خروجی را ایجاد کرد</string>
     <string name="create_temp_dir_error">نمی‌توان دایرکتوری موقت محلی را ساخت</string>
     <string name="create_tunnel">ساختن تونل</string>
+    <string name="copied_to_clipboard">متن در کلیپ‌بورد کپی شد</string>
     <string name="dark_theme_summary_off">اکنون از پوسته روشن(روز) استفاده می‌شود</string>
     <string name="dark_theme_summary_on">اکنون از پوسته تاریک(شب) استفاده می‌شود</string>
     <string name="dark_theme_title">استفاده از پوسته تاریک</string>
     <string name="delete">حذف</string>
+    <string name="tv_delete">موارد را برای حذف انتخاب کنید</string>
+    <string name="tv_select_a_storage_drive">حافظه ذخیره سازی موردنظر را انتخاب کنید</string>
+    <string name="tv_no_file_picker">برای مدیریت پوشه های حافظه، یک برنامه مدیریت فایل نصب کنید</string>
+    <string name="tv_add_tunnel_get_started">یک پروفایل تونل برای شروع انتخاب کنید</string>
+    <string name="disable_config_export_title">غیرفعال سازی خروجی گرفتن از کانفیگ ها</string>
+    <string name="disable_config_export_description">غیرفعال سازی خروجی گرفتن، دسترسی کلیدهای خصوصی را کم می کند</string>
     <string name="dns_servers">سرورهای DNS</string>
     <string name="edit">ویرایش</string>
     <string name="endpoint">نقطه پایان</string>
@@ -141,12 +148,15 @@
     <string name="module_disabler_disabled_title">فعال‌سازی ماژول کرنل ِبک اند</string>
     <string name="module_disabler_enabled_title">غیرفعال‌سازی پس‌زمینه واحد هسته</string>
     <string name="module_installer_error">مشکلی پیش آمد. لطفا دوباره تلاش کنید</string>
+    <string name="module_installer_initial">ماژول آزمایشی‌ِ کرنل می تواند کارایی را افزایش دهد</string>
     <string name="module_installer_not_found">هیچ واحدی برای دستگاه شما در دسترس نیست</string>
     <string name="module_installer_title">واحد هسته را بارگیری و نصب کن</string>
     <string name="module_installer_working">در حال بارگیری و نصب…</string>
     <string name="module_version_error">نمی‌توان نگارش واحد هسته را مشخص کرد</string>
     <string name="mtu">MTU</string>
     <string name="multiple_tunnels_summary_off">روشن کردن یک تونل ، تونل های دیگر را خاموش خواهد کرد</string>
+    <string name="multiple_tunnels_summary_on">تونل های چندتایی ممکن است استفاده همزمان را فعال کند</string>
+    <string name="multiple_tunnels_title">تونل چندگانه همزمان</string>
     <string name="name">نام</string>
     <string name="no_config_error">تلاش برای فعالسازی تونل بدون تنظیمات</string>
     <string name="no_configs_error">هیچ پیکربندی یافت نشد</string>
@@ -184,6 +194,8 @@
     <string name="transfer_mibibytes">%.2f MiB</string>
     <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
+    <string name="tun_create_error">نمی‌توان تونل را ساخت</string>
+    <string name="tunnel_config_error">ناتوان در کانفیگ و ساخت تونل (wg-quick returned %d)</string>
     <string name="tunnel_create_error">نمی‌توان تونل را ساخت: %s</string>
     <string name="tunnel_create_success">تونل “%s” با موفقیت ساخته شد</string>
     <string name="tunnel_error_already_exists">تونل “%s” از قبل وجود دارد</string>
