--- a/ui/src/main/res/values-ru/strings.xml
+++ b/ui/src/main/res/values-ru/strings.xml
@@ -20,12 +20,12 @@
     </plurals>
     <plurals name="import_partial_success">
         <item quantity="one">Импортирован %1$d из %2$d туннелей</item>
-        <item quantity="few">Импортировано %1$d из %2$d туннеля</item>
+        <item quantity="few">Импортировано %1$d из %2$d туннелей</item>
         <item quantity="many">Импортировано %1$d из %2$d туннелей</item>
         <item quantity="other">Импортировано %1$d из %2$d туннелей</item>
     </plurals>
     <plurals name="import_total_success">
-        <item quantity="one">Импортированный %d туннель</item>
+        <item quantity="one">Импортирован %d туннель</item>
         <item quantity="few">Импортировано %d туннеля</item>
         <item quantity="many">Импортировано %d туннелей</item>
         <item quantity="other">Импортировано %d туннелей</item>
@@ -37,26 +37,26 @@
         <item quantity="other">%d Исключенных приложений</item>
     </plurals>
     <plurals name="set_included_applications">
-        <item quantity="one">%d Включенное приложение</item>
-        <item quantity="few">%d Включенных приложений</item>
-        <item quantity="many">%d Включенных приложений</item>
-        <item quantity="other">%d Включенных приложений</item>
+        <item quantity="one">%d включенное приложение</item>
+        <item quantity="few">%d включенных приложения</item>
+        <item quantity="many">%d включенных приложений</item>
+        <item quantity="other">%d включенных приложений</item>
     </plurals>
     <plurals name="n_excluded_applications">
-        <item quantity="one">%d исключен</item>
+        <item quantity="one">%d исключено</item>
         <item quantity="few">%d исключено</item>
         <item quantity="many">%d исключено</item>
         <item quantity="other">%d исключено</item>
     </plurals>
     <plurals name="n_included_applications">
-        <item quantity="one">%d влючен</item>
+        <item quantity="one">%d влючено</item>
         <item quantity="few">%d включено</item>
         <item quantity="many">%d включено</item>
         <item quantity="other">%d включено</item>
     </plurals>
     <string name="all_applications">Все приложения</string>
-    <string name="exclude_from_tunnel">Исключить</string>
-    <string name="include_in_tunnel">Только включено</string>
+    <string name="exclude_from_tunnel">Исключить для</string>
+    <string name="include_in_tunnel">Включить для</string>
     <plurals name="include_n_applications">
         <item quantity="one">Включить %d приложение</item>
         <item quantity="few">Включить %d приложения</item>
@@ -70,65 +70,72 @@
         <item quantity="other">Исключить %d приложений</item>
     </plurals>
     <plurals name="persistent_keepalive_seconds_unit">
-        <item quantity="one">каждую %d секунду</item>
+        <item quantity="one">каждую секунду</item>
         <item quantity="few">каждые %d секунды</item>
         <item quantity="many">каждые %d секунд</item>
         <item quantity="other">каждые %d секунд</item>
     </plurals>
     <plurals name="persistent_keepalive_seconds_suffix">
         <item quantity="one">секунда</item>
-        <item quantity="few">секунд</item>
+        <item quantity="few">секунды</item>
         <item quantity="many">секунд</item>
         <item quantity="other">секунд</item>
     </plurals>
     <string name="use_all_applications">Использовать все приложения</string>
     <string name="add_peer">Добавить пир</string>
-    <string name="addresses">IP-адреса</string>
+    <string name="addresses">Адреса</string>
     <string name="applications">Приложения</string>
     <string name="allow_remote_control_intents_summary_off">Внешние приложения не могут переключать туннели (рекомендуется)</string>
-    <string name="allow_remote_control_intents_summary_on">Внешние приложения могут переключать туннели (расширенное)</string>
+    <string name="allow_remote_control_intents_summary_on">Внешние приложения могут переключать туннели (продвинутые)</string>
     <string name="allow_remote_control_intents_title">Разрешить управление через внешние приложения</string>
     <string name="allowed_ips">Разрешенные IP-адреса</string>
     <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s из %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s в %2$s</string>
-    <string name="bad_config_explanation_pka">: Должен быть положительный и не больше 65535</string>
-    <string name="bad_config_explanation_positive_number">: Должен быть положительный</string>
+    <string name="bad_config_explanation_pka">: Значение должно быть больше нуля, но меньше 65535</string>
+    <string name="bad_config_explanation_positive_number">: Значение должно быть больше нуля</string>
     <string name="bad_config_explanation_udp_port">: Должен быть действительный номер порта UDP</string>
     <string name="bad_config_reason_invalid_key">Неправильный ключ</string>
     <string name="bad_config_reason_invalid_number">Неправильный номер</string>
-    <string name="bad_config_reason_invalid_value">Неправильное значение</string>
+    <string name="bad_config_reason_invalid_value">Недопустимое значение</string>
     <string name="bad_config_reason_missing_attribute">Несуществующий атрибут</string>
     <string name="bad_config_reason_missing_section">Несуществующий раздел</string>
     <string name="bad_config_reason_syntax_error">Синтаксическая ошибка</string>
     <string name="bad_config_reason_unknown_attribute">Неизвестный атрибут</string>
     <string name="bad_config_reason_unknown_section">Неизвестный раздел</string>
     <string name="bad_config_reason_value_out_of_range">Значение вне диапазона</string>
-    <string name="bad_extension_error">Файл должен быть .conf или .zip</string>
+    <string name="bad_extension_error">Файл должен иметь формат .conf или .zip</string>
     <string name="cancel">Отмена</string>
     <string name="config_delete_error">Не удалось удалить файл конфигурации %s</string>
     <string name="config_exists_error">Конфигурация для “%s” уже существует</string>
     <string name="config_file_exists_error">Файл конфигурации “%s” уже существует</string>
     <string name="config_not_found_error">Файл конфигурации “%s” не найден</string>
     <string name="config_rename_error">Не удалось переименовать файл конфигурации “%s”</string>
-    <string name="config_save_error">Не удается сохранить конфигурацию для “%1$s”: %2$s</string>
+    <string name="config_save_error">Не удалось сохранить конфигурацию для “%1$s”: %2$s</string>
     <string name="config_save_success">Конфигурация для “%s” успешно сохранена</string>
-    <string name="create_activity_title">Создать WireGuard туннель</string>
-    <string name="create_bin_dir_error">Не удалось создать локальный двоичный каталог</string>
+    <string name="create_activity_title">Создать туннель WireGuard</string>
+    <string name="create_bin_dir_error">Не удалось создать локальный бинарный каталог</string>
     <string name="create_downloads_file_error">Не удалось создать файл в каталоге загрузок</string>
-    <string name="create_empty">Создать вручную</string>
+    <string name="create_empty">Создать с нуля</string>
     <string name="create_from_file">Импорт из файла или архива</string>
     <string name="create_from_qr_code">Сканировать QR-код</string>
     <string name="create_output_dir_error">Не удалось создать выходной каталог</string>
     <string name="create_temp_dir_error">Не удалось создать временный локальный каталог</string>
     <string name="create_tunnel">Создать туннель</string>
+    <string name="copied_to_clipboard">Скопирован(о) в буфер обмена: %s</string>
     <string name="dark_theme_summary_off">В данный момент используется светлая (дневная) тема</string>
     <string name="dark_theme_summary_on">В данный момент используется темная (ночная) тема</string>
     <string name="dark_theme_title">Использовать темную тему</string>
     <string name="delete">Удалить</string>
+    <string name="tv_delete">Выберите туннель для удаления</string>
+    <string name="tv_select_a_storage_drive">Выберите накопитель</string>
+    <string name="tv_no_file_picker">Пожалуйста установите утилиту управления файлами для их просмотра</string>
+    <string name="tv_add_tunnel_get_started">Добавьте туннель, чтобы начать</string>
+    <string name="disable_config_export_title">Отключить экспорт конфигурации</string>
+    <string name="disable_config_export_description">Отключение экспорта конфигурации делает приватные ключи менее доступными</string>
     <string name="dns_servers">DNS-серверы</string>
-    <string name="edit">Редактировать</string>
+    <string name="edit">Изменить</string>
     <string name="endpoint">Конечная точка</string>
     <string name="error_down">Ошибка при выходе из туннеля: %s</string>
     <string name="error_fetching_apps">Ошибка при получении списка приложений: %s</string>
@@ -140,17 +147,17 @@
     <string name="hint_automatic">(авто)</string>
     <string name="hint_generated">(сгенерирован)</string>
     <string name="hint_optional">(опционально)</string>
-    <string name="hint_optional_discouraged">(опционально, не рекомендуется)</string>
-    <string name="hint_random">(авто)</string>
-    <string name="illegal_filename_error">Неверное имя файла “%s”</string>
-    <string name="import_error">Не удалось импортировать туннель: %s</string>
+    <string name="hint_optional_discouraged">(необязательно, не рекомендуется)</string>
+    <string name="hint_random">(случайно)</string>
+    <string name="illegal_filename_error">Недопустимое имя файла “%s”</string>
+    <string name="import_error">Невозможно импортировать туннель: %s</string>
     <string name="import_from_qr_code">Импортировать туннель из QR-кода</string>
     <string name="import_success">Импортировано “%s”</string>
     <string name="interface_title">Интерфейс</string>
     <string name="key_contents_error">Плохие символы в ключе</string>
-    <string name="key_length_error">Неверная длина ключа</string>
-    <string name="key_length_explanation_base64">: Ключи WireGuard base64 должны содержать 44 символа (32 байта)</string>
-    <string name="key_length_explanation_binary">: Ключи WireGuard должны быть 32 байта</string>
+    <string name="key_length_error">Неправильная длина ключа</string>
+    <string name="key_length_explanation_base64">: ключи WireGuard base64 должны содержать 44 символа (32 байта)</string>
+    <string name="key_length_explanation_binary">: ключи WireGuard должны быть 32 байта</string>
     <string name="key_length_explanation_hex">: HEX ключи WireGuard должны содержать 64 символа (32 байта)</string>
     <string name="listen_port">Порт</string>
     <string name="log_export_error">Не удалось экспортировать журнал: %s</string>
@@ -162,19 +169,19 @@
     <string name="log_viewer_pref_title">Просмотр журналов приложения</string>
     <string name="log_viewer_title">Журнал</string>
     <string name="logcat_error">Не удалось запустить logcat: </string>
-    <string name="module_disabler_disabled_summary">Экспериментальный модуль ядра приоритетнее и улучшает производительность</string>
-    <string name="module_disabler_disabled_title">Включить модуль ядра</string>
-    <string name="module_disabler_enabled_summary">Более медленный бэкэнд пользовательского пространства может улучшить стабильность</string>
-    <string name="module_disabler_enabled_title">Выключить модуль ядра</string>
+    <string name="module_disabler_disabled_summary">Экспериментальный модуль ядра может улучшить производительность</string>
+    <string name="module_disabler_disabled_title">Включить бэкэнд модуля ядра</string>
+    <string name="module_disabler_enabled_summary">Пользовательское пространство немного медленнее и улучшает стабильность</string>
+    <string name="module_disabler_enabled_title">Отключить бэкэнд модуля ядра</string>
     <string name="module_installer_error">Что-то пошло не так. Пожалуйста, попробуйте еще раз</string>
     <string name="module_installer_initial">Экспериментальный модуль ядра может улучшить производительность</string>
     <string name="module_installer_not_found">Для вашего устройства нет доступных модулей</string>
     <string name="module_installer_title">Скачать и установить модуль ядра</string>
     <string name="module_installer_working">Скачивание и установка…</string>
-    <string name="module_version_error">Не удалось определить версию модуля ядра</string>
+    <string name="module_version_error">Невозможно определить версию модуля ядра</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_summary_off">Только один туннель, выключит другие</string>
-    <string name="multiple_tunnels_summary_on">Могут быть включены несколько туннелей одновременно</string>
+    <string name="multiple_tunnels_summary_off">Включение одного туннеля отключит другие</string>
+    <string name="multiple_tunnels_summary_on">Одновременно можно включить несколько туннелей</string>
     <string name="multiple_tunnels_title">Несколько туннелей</string>
     <string name="name">Название</string>
     <string name="no_config_error">Попытка поднять туннель без конфигурации</string>
@@ -185,7 +192,7 @@
     <string name="parse_error_inet_endpoint">конечная точка</string>
     <string name="parse_error_inet_network">IP-сеть</string>
     <string name="parse_error_integer">число</string>
-    <string name="parse_error_reason">Не могу разобрать %1$s “%2$s”</string>
+    <string name="parse_error_reason">Не удается спарсить %1$s “%2$s”</string>
     <string name="peer">Пир</string>
     <string name="permission_description">управлять туннелями WireGuard, включая и отключая туннели по желанию, потенциально перенаправляя интернет-трафик</string>
     <string name="permission_label">управлять туннелями WireGuard</string>
@@ -197,21 +204,21 @@
     <string name="qr_code_hint">Совет: генерировать с `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="restore_on_boot_summary_off">Не поднимать ранее выбранные туннели при загрузке</string>
     <string name="restore_on_boot_summary_on">Поднимать ранее выбранные туннели при загрузке</string>
-    <string name="restore_on_boot_title">Восстанавливать при загрузке</string>
+    <string name="restore_on_boot_title">Восстановить при загрузке</string>
     <string name="save">Сохранить</string>
     <string name="select_all">Выбрать все</string>
     <string name="settings">Настройки</string>
     <string name="shell_exit_status_read_error">Shell не может прочитать статус выхода</string>
     <string name="shell_marker_count_error">Shell ожидает 4 маркера, получено %d</string>
     <string name="shell_start_error">Не удалось запустить Shell: %d</string>
-    <string name="success_application_will_restart">Успех. Приложение перезапустится…</string>
+    <string name="success_application_will_restart">Успешно. Приложение будет перезапущено…</string>
     <string name="toggle_all">Инвертировать все</string>
     <string name="toggle_error">Ошибка переключения туннеля WireGuard: %s</string>
     <string name="tools_installer_already">wg и wg-quick уже установлены</string>
     <string name="tools_installer_failure">Не удалось установить инструменты командной строки (нет root?)</string>
-    <string name="tools_installer_initial">Установите дополнительные инструменты для сценариев</string>
-    <string name="tools_installer_initial_magisk">Установите дополнительные инструменты для сценариев в качестве модуля Magisk</string>
-    <string name="tools_installer_initial_system">Установите дополнительные инструменты для сценариев в системный раздел</string>
+    <string name="tools_installer_initial">Установить дополнительные инструменты для сценариев</string>
+    <string name="tools_installer_initial_magisk">Установить дополнительные инструменты для сценариев в качестве модуля Magisk</string>
+    <string name="tools_installer_initial_system">Установить дополнительные инструменты для сценариев в системный раздел</string>
     <string name="tools_installer_success_magisk">wg и wg-quick установлены как модуль Magisk (требуется перезагрузка)</string>
     <string name="tools_installer_success_system">wg и wg-quick установлены в системный раздел</string>
     <string name="tools_installer_title">Установить инструменты командной строки</string>
@@ -219,15 +226,15 @@
     <string name="tools_unavailable_error">Необходимые инструменты недоступны</string>
     <string name="transfer">Статистика</string>
     <string name="transfer_bytes">%d Б</string>
-    <string name="transfer_gibibytes">%.2f Гб</string>
-    <string name="transfer_kibibytes">%.2f Кб</string>
-    <string name="transfer_mibibytes">%.2f Мб</string>
-    <string name="transfer_rx_tx">Принято: %1$s, Отдано: %2$s</string>
-    <string name="transfer_tibibytes">%.2f Тб</string>
+    <string name="transfer_gibibytes">%.2f ГиБ</string>
+    <string name="transfer_kibibytes">%.2f КиБ</string>
+    <string name="transfer_mibibytes">%.2f МиБ</string>
+    <string name="transfer_rx_tx">Принято: %1$s, Передано: %2$s</string>
+    <string name="transfer_tibibytes">%.2f ТиБ</string>
     <string name="tun_create_error">Не удалось создать устройство tun</string>
     <string name="tunnel_config_error">Не удалось настроить туннель (wg-quick вернул %d)</string>
     <string name="tunnel_create_error">Не удалось создать туннель: %s</string>
-    <string name="tunnel_create_success">Успешно созданный туннель “%s”</string>
+    <string name="tunnel_create_success">Успешно создан туннель “%s”</string>
     <string name="tunnel_error_already_exists">Туннель “%s” уже существует</string>
     <string name="tunnel_error_invalid_name">Некорректное название</string>
     <string name="tunnel_list_placeholder">Добавьте туннель с помощью синей кнопки</string>
@@ -238,18 +245,18 @@
     <string name="type_name_go_userspace">Перейти в пользовательское пространство</string>
     <string name="type_name_kernel_module">Модуль ядра</string>
     <string name="unknown_error">Неизвестная ошибка</string>
-    <string name="version_summary">%1$s %2$s</string>
-    <string name="version_summary_checking">Проверка версии %s</string>
+    <string name="version_summary">%1$s бэкэнд %2$s</string>
+    <string name="version_summary_checking">Проверка версии бэкэнда %s</string>
     <string name="version_summary_unknown">Неизвестная версия %s</string>
     <string name="version_title">WireGuard для Android v%s</string>
-    <string name="vpn_not_authorized_error">VPN-сервис не авторизован пользователем</string>
+    <string name="vpn_not_authorized_error">Сервис VPN не авторизован пользователем</string>
     <string name="vpn_start_error">Не удалось запустить службу Android VPN</string>
     <string name="zip_export_error">Не удалось экспортировать туннели: %s</string>
     <string name="zip_export_success">Сохранено в “%s”</string>
-    <string name="zip_export_summary">Zip-архив будет сохранен в папке загрузок</string>
-    <string name="zip_export_title">Экспорт туннелей в zip-архив</string>
+    <string name="zip_export_summary">Zip-файл будет сохранен в папке загрузок</string>
+    <string name="zip_export_title">Экспорт туннелей в zip-файл</string>
     <string name="biometric_prompt_zip_exporter_title">Аутентификация для экспорта туннелей</string>
-    <string name="biometric_prompt_private_key_title">Аутентификация для просмотра приватного ключа</string>
+    <string name="biometric_prompt_private_key_title">Аутентификация для просмотра закрытого ключа</string>
     <string name="biometric_auth_error">Ошибка аутентификации</string>
     <string name="biometric_auth_error_reason">Ошибка аутентификации: %s</string>
 </resources>
